# corridors

./: .gitignore  README.md  corridors-web.ps1  corridors-web.sh  corridors.ps1  corridors.sh  gh_setup.sh  pyproject.toml  setup.ps1  setup.py  setup.sh
az_benchmarks/: cuda-cpu-16-gpu-nvidia-geforce-rtx-3070-laptop-gpu-vram-8.0-count-1-ram-32-2fdfa42c.json  cuda-cpu-160-gpu-nvidia-h200-vram-139.7-count-1-ram-234-b2c550aa.json  cuda-cpu-384-gpu-nvidia-geforce-rtx-5090-vram-31.4-count-1-ram-100-c100ed6b.json  cuda-cpu-64-gpu-nvidia-geforce-rtx-5090-vram-31.4-count-1-ram-116-71ce6add.json
nn_checkpoints/: 100g_d3_e15__e30.meta.json  100g_d3_e15__e30.safetensors  100g_d3_e15__e60.meta.json  100g_d3_e15__e60.safetensors  aaron001_candidate.meta.json  aaron002_best.meta.json  aaron002_candidate.meta.json  az_latest.meta.json  az_loop_best.meta.json  az_loop_big_run_best.meta.json  az_loop_mcts_2000_best.meta.json  az_loop_rtx_6000_pro_best.meta.json  azloop_20260712-180919_g100_s200_p150_cuda_w14_b64_cauto_cp1p5_da0p3_df0p25_tm20_th1_tl0p1_best.meta.json  azloop_20260712-180919_g100_s200_p150_cuda_w14_b64_cauto_cp1p5_da0p3_df0p25_tm20_th1_tl0p1_candidate.meta.json  azloop_20260712-183611_g140_s25_p150_cuda_w14_b64_cauto_cp1p5_da0p3_df0p25_tm20_th1_tl0p1_best.meta.json  azloop_20260712-183611_g140_s25_p150_cuda_w14_b64_cauto_cp1p5_da0p3_df0p25_tm20_th1_tl0p1_candidate.meta.json  azloop_20260712-213611_g140_s500_p150_cuda_w14_b64_cauto_cp1p5_da0p3_df0p25_tm20_th1_tl0p1_best.meta.json  azloop_20260713-043209_g100_s1000_best.meta.json  azloop_from_best_best.meta.json  elo.json  (+11 more)
(+489 files in other folders)
